Annotation Processor, refactoring